@@ -42,6 +42,8 @@ Version 1.3.6+svn:
      of units (bug #9649)
    * attack/move cursors and attack direction indicator are not used when
      observing (bug #9610)
+   * 'help' and 'more' button in the title screen now also have a tooltip
+     (bug #9618 patch #790)
  * WML engine:
    * now [base_unit]id= inside [unit] can extend upon existing unit types
    * new tag [filter_radius] to allow greater control over radius expansion
